fixed GUI so it uses collectors tolist